Fixed the vertical alignment of select menu button.

--- a/styles/MembersPage.module.css
+++ b/styles/MembersPage.module.css
@@ -17,8 +17,9 @@
 	color: rgba(109, 109, 109, 1);
 	position: absolute;
 	right: 10px;
-	align-self: center;
 	height: 20px;
+	top: 50%;
+	transform: translateY(-50%);
 }
 
 .members-batch-select {
@@ -77,7 +78,6 @@
 
 .members-section-horizontal {
 	display: block;
-	overflow-x: hidden;
 	overflow-y: hidden;
 	flex-wrap: nowrap;
 	text-wrap: nowrap;
@@ -115,9 +115,9 @@
 	border: none;
 	display: flex;
 	align-items: center;
-	align-self: center;
 	padding: 10px;
-	transform: translateY(-50%);
+	bottom: 50%;
+	transform: translateY(-50% - 5px);
 }
 
 @media (max-width: 800px) {
